# wewerewondering

./: .terraformignore  CONTRIBUTING.md  README.md
.github/: dependabot.yml
.github/actions/client/: action.yaml
.github/actions/distro/: action.yaml
.github/actions/dynamodb/: action.yml
.github/actions/local-dynamo/: action.yml
.github/workflows/: check.yml  client.yml  e2e.yml  lint-client.yml  scheduled.yml  terraform-apply.yml  terraform-plan.yml  test.yml
client/: .eslintrc.cjs  .prettierignore  .prettierrc  eslint.config.cjs  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  vite.config.js
client/public/: robots.txt
client/src/: App.svelte  List.svelte  Question.svelte  UpdatesToggle.svelte  helpers.js  main.js  store.js  types.d.ts  utils.js  utils.test.js
infra/: .gitignore  .terraform.lock.hcl  apigw.tf  athena.tf  cloudfront.tf  dashboard.tf  domain.tf  dynamodb.tf  index-everywhere.js  lambda.tf  logging.tf  main.tf  static.tf  terraform.tf  terraform.tfstate  terraform.tfvars
server/: .gitignore  Cargo.toml  CargoLambda.toml  Makefile  run-dynamodb-local.sh  run-migrations.sh  run-tests.sh  samconfig.toml  template.yaml
server/src/: ask.rs  event.rs  lambda.rs  lib.rs  list.rs  main.rs  new.rs  question.rs  questions.rs  test.json  toggle.rs  utils.rs  vote.rs
server/tests/: e2e.rs
server/tests/e2e/: answer.rs  ask.rs  main.rs  utils.rs  vote.rs
