[package]
name = "wewerewondering-api"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.9", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.1.0"
aws-smithy-types = "1.0.1"
aws-smithy-runtime-api = "1.0.0"
aws-smithy-http = "0.60"
axum = "0.7.5"
http = "1.0"
http-body-util = "0.1.1"
hyper = { version = "1.0.1", features = ["server", "http1", "http2"] }
lambda_http = { version = "0.13.0", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.13.0"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit", "trace"] }
tower-service = "0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
ulid = { version = "1.0.0", features = ["serde"] }
