[package]
name = "wewerewondering-api"
version = "0.1.0"
edition = "2021"
default-run = "wewerewondering-api"

[features]
default = []
# We've got several types of tests in the project: 
#  - tests against an in-memory db, which we run with the usual `cargo t`
#  - tests against a local instance of DynamoDB, which we enable with `--include-ignored`
#  - end-to-end tests, which require extra setup, and which get enabled with the `e2e-test` flag
e2e-test = []

[dependencies]
aws-config = { version = "1.8.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.91.0"
aws-smithy-types = "1.0.1"
aws-smithy-runtime-api = "1.9.0"
aws-smithy-http = "0.62.1"
axum = "0.8.3"
http = "1.0"
http-body-util = "0.1.3"
hyper = { version = "1.0.1", features = ["server", "http1", "http2"] }
lambda_http = { version = "0.17.0", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.14.4"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["limit", "trace"] }
tower-service = "0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
ulid = { version = "1.2.1", features = ["serde"] }

[dev-dependencies]
axum-reverse-proxy = "1.0.3"
fantoccini = "0.22.0"
serial_test = "3.2.0"
tower-http = { version = "0.6", features = ["limit", "trace", "fs"] }
url = "2.5.4"

[[bin]]
name = "lambda"
path = "./src/lambda.rs"
